# polragion

./: .gitignore
polragion-backend/: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION.md  README.md  config.py  doc.md  env  main.py  pyproject.toml  test_main.http
polragion-backend/model/: VectorStoreModel.py  WorkItem.py
polragion-backend/polragion/: __init__.py  app.py  settings.py
polragion-backend/polragion/api/: auth.py  dependencies.py  exception_middleware.py  github_api_utils.py  github_auth.py  health.py  schemas.py  work_items.py
polragion-backend/polragion/application/: __init__.py  ai_service.py  copilot_service.py  session_service.py  work_item_mapper.py  work_item_service.py
polragion-backend/polragion/database/: memory_repository.py  repository.py  sqlite_repository.py
polragion-backend/polragion/domain/: data_fetcher.py  data_worker.py  vector_store.py  work_item.py
polragion-backend/polragion/infrastructure/: copilot_service.py  errors.py  json_data_fetcher.py  polarion_data_fetcher.py  qdrant_data_worker.py  qdrant_hybrid_vector_store.py  qdrant_utils.py  qdrant_vector_store.py
polragion-backend/polragion/models/: ai_message.py  user.py
polragion-backend/polragion/utils/: general.py  token_cipher.py
polragion-backend/tests/: factories.py  fakes.py  test_api.py  test_mapper.py  test_qdrant_ids.py  test_service.py
polragion-backend/vector_store/: config.py  main.py
polragion-backend/vector_store/model/: QdrantModel.py  VectorStoreModel.py  WorkItem.py
polragion-backend/vectordb/: QdrantVectorDb.py  VectorDbBase.py
(+8 files in other folders)
