[project]
name = "polragion-backend"
version = "0.2.0"
description = "FastAPI backend for indexing and searching Polarion work items"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "fastembed>=0.5,<1.0",
    "github-copilot-sdk>=1.0.7",
    "itsdangerous>=2.2.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings==2.14.2",
    "qdrant-client>=1.13,<2.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<10.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
